# bjtu_mis_py

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
bjtu_mis/: __init__.py  captcha.py  client.py  enums.py  exceptions.py  models.py
bjtu_mis/_internal/: __init__.py  auth.py  http.py
docs/: API_DESIGN.md
examples/: quickstart.py
tests/: fixtures.py  test_auth.py  test_captcha.py  test_client.py  test_enums_exceptions.py  test_models.py  test_parsers.py
